syntax="proto3";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";

option java_package = "com.luxoft.xmlcall.proto";
option java_outer_classname = "XmlCall";

package xmlcall;

enum ExecType
{
   UNKNOWN = 0;
   QUERY = 1;
   INVOKE = 2;
   EVENT = 3;
}

extend google.protobuf.MethodOptions {
  ExecType exec_type = 51234;
}

message ChaincodeFault
{
    string message = 1;
}

message ChaincodeResult
{
    string txid = 1;
}

message ChaincodeRequest
{
    string chaincodeId = 1;
    string channel = 2;
}
